user settings: Correct overflow behaviour of custom user field.
Fixes: #14816

--- a/static/styles/settings.scss
+++ b/static/styles/settings.scss
@@ -1959,7 +1959,6 @@ input[type=text]#settings_search {
 
 .custom_user_field .pill-container {
     padding: 2px 6px;
-    height: 24px;
     background-color: hsl(0, 0%, 100%);
 }
 
